minor css changes

--- a/index.htm
+++ b/index.htm
@@ -131,8 +131,8 @@
                   </div>
                   <div class="top-right clearfix">
                      <ul class="info-list clearfix">
-                        <li><a href="tel:http://(934)2567850">+260 212 671661<span class="icon fa fa-phone"></span></a></li>
-                        <li><a href="#"><span class="__cf_email__" data-cfemail="dbb0a9b4b7bab59bb0a9b4b7bab5f5b8a1">Sales @neelkanthcables.com</span><span class="icon fa fa-envelope-open"></span></a></li>
+                        <li><span class="icon fa fa-phone text-white mr-2"></span><a href="tel:http://(934)2567850">+260 212 671661</a></li>
+                        <li><span class="icon fa fa-envelope-open text-white mr-2"></span><a href="#"><span class="__cf_email__" data-cfemail="dbb0a9b4b7bab59bb0a9b4b7bab5f5b8a1">Sales @neelkanthcables.com</span></a></li>
                      </ul>
                   </div>
                </div>
