--- a/index.htm
+++ b/index.htm
@@ -553,7 +553,7 @@
                                                                         <h2 class="text-center">What Makes Us Unique</h2>
                                                                         
                                                                      </div>
-                                                                     <div class="position-relative">
+                                                                     <div class="position-relative text-center">
                                                                         <img src="./images/unique-infographics.png" class="img-fluid" alt="">
                                                                      </div>
                                                                   </div>
