minor design update

--- a/index.htm
+++ b/index.htm
@@ -288,7 +288,7 @@
                                                                         				},
                                                                         				arrows: {
                                                                         					enable:true,
-                                                                        					tmp:"<div class=\"tp-title-wrap\">	<span class=\"tp-arr-titleholder\">{{title}}</span>    <span class=\"tp-arr-imgholder\"></span> </div>",
+                                                                        					// tmp:"<div class=\"tp-title-wrap\">	<span class=\"tp-arr-titleholder\">{{title}}</span>    <span class=\"tp-arr-imgholder\"></span> </div>",
                                                                         					style:"hebe",
                                                                         					hide_onmobile:true,
                                                                         					hide_under:778,
