--- a/csr.htm
+++ b/csr.htm
@@ -225,14 +225,14 @@
          <section class="page-banner" style="background-image: url(./images/about-banner.png) !important;">
             <div class="auto-container">
                <div class="inner-container clearfix">
-                  <h1>Market</h1>
+                  <h1>CSR</h1>
                   <span property="itemListElement" typeof="ListItem">
                      <a property="item" typeof="WebPage"   href="#" class="home text-white">
                          <span property="name">Home</span>
                         </a>
                      <meta property="position" content="1">
                   </span>
-                  &gt; Market
+                  &gt; CSR
                </div>
             </div>
          </section>
