--- a/quality-assurance.htm
+++ b/quality-assurance.htm
@@ -146,7 +146,8 @@
             <div class="header-top">
                <div class="auto-container clearfix">
                   <div class="top-left clearfix">
-                     <div class="text">We offer revolution of industrial engineering</div>
+                     <div class="text">We want you safe 
+</div>
                      <ul class="social-links clearfix">
                         <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
                         <li><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
