--- a/product.htm
+++ b/product.htm
@@ -199,7 +199,7 @@
                                     </ul>
                                  </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page nav-item">
-                                    <a href="./market.htm" class="nav-link">Markets</a>
+                                    <a href="./our-presence.htm" class="nav-link">Our Presence</a>
                                  </li>
                               
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page nav-item">
@@ -209,7 +209,9 @@
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page nav-item">
                                     <a href="./csr.htm" class="nav-link">CSR</a>
                                  </li>
-                                 
+                                 <li class="menu-item menu-item-type-post_type menu-item-object-page nav-item">
+                                    <a href="./support.htm" class="nav-link">Support</a>
+                                 </li>
                                  <li class="menu-item menu-item-type-post_type menu-item-object-page nav-item">
                                     <a href="./contact.htm" class="nav-link">Contact</a>
                                  </li>
@@ -528,7 +530,7 @@
                                           <li><a href="./index.htm">Home</a></li>
                                           <li><a href="./about.htm">About us</a></li>
                                           <li><a href="./product.htm">Products</a></li>
-                                          <li><a href="./market.htm">Markets</a></li>
+                                          <li><a href="./our-presence.htm">Our Presence</a></li>
                                           <li><a href="./quality-assurance.htm">Quality</a></li>
                                           <li><a href="./partner-program.htm">Partner program</a></li>
                                        </ul>
