--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en-US">
    <head>
       <meta charset="UTF-8">
@@ -515,7 +515,7 @@
                                                                         <div class="count-column col-xl-3 col-lg-3 col-md-6 col-sm-12">
                                                                            <div class="inner-box">
                                                                               <div class="count-box">
-                                                                                 <div class="count-outer"><span class="count-text" data-speed="2000" data-stop="25">0</span>Acres</div>
+                                                                                 <div class="count-outer"><span class="count-text" data-speed="2000" data-stop="7">0</span>+</div>
                                                                                  <h4 class="counter-title">
                                                                                     Manufacturing Units
                                                                                  </h4>
