--- a/contact.htm
+++ b/contact.htm
@@ -476,7 +476,9 @@
                                  <div id="custom_html-4" class="widget_text widget widget_custom_html">
                                     <div class="textwidget custom-html-widget">
                                        <div class="text">Creating Possibilities in Africa Through Opportunities We envision a flourishing and happy future for the people of Africa. The organization believes in overall growth through better ideas and innovation. Neelkanth Cables Limited strives to be a catalyst for positive change and cumulative progress.</div>
-                                       <a href="#" class="theme-btn btn-style-four">About NCL</a>
+                                       <a href="./about.htm" class="theme-btn btn-style-four">About NCL</a>
+
+
                                     </div>
                                  </div>
                               </div>
@@ -518,10 +520,12 @@
                            </div>
                            <div class="footer-column col-lg-3 col-md-4 col-sm-12">
                               <div class="footer-widget services-widget">
-                                 <h2>Recent Post</h2>
+                                 <h2>Get in Touch</h2>
+
                                  <div class="pl-xl-4 d-flex flex-column justify-content-center h-100">
                                     <a class="d-flex align-items-center mr-3 text-white mb-3" href="">
-                                      <i class="fas fa-phone mr-2"></i>
+                                      <i class="icon fa fa-phone text-white mr-2"></i>
+
                                       +260 212 671661
                                     </a>
                     
