--- a/our-presence.htm
+++ b/our-presence.htm
@@ -230,7 +230,7 @@
             </div>
  
          </header>
-         <section class="page-banner" style="background-image: url(./images/about-banner.png) !important;">
+         <section class="page-banner" style="background-image: url(./images/page-banner/our-presence.jpg) !important;">
             <div class="auto-container">
                <div class="inner-container clearfix">
                   <h1>Our Presence</h1>
@@ -289,7 +289,7 @@
                                           <div class="services-block-three col-xl-4 col-lg-6 col-md-6 col-sm-12">
                                           <div class="inner-box wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
                                           <div class="image">
-                                          <a href=".#">
+                                          <a>
                                           <img src="./images/markets/market1.jpg" alt="Alt">
                                           </a>
                                           </div>
@@ -312,12 +312,12 @@
                                           <div class="services-block-three col-xl-4 col-lg-6 col-md-6 col-sm-12">
                                           <div class="inner-box wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                                           <div class="image">
-                                          <a href="#">
+                                          <a>
                                           <img src="./images/markets/market2.jpg" alt="Alt">
                                           </a>
                                           </div>
                                           <div class="lower-content">
-                                          <h3><a href="#">POWER & ENERGY SECTOR</a></h3>
+                                          <h3>POWER & ENERGY elementor-section-wrap</h3>
                                           <div class="text">
                                              <div class="market-info">
                                                 <strong class="font-weight-bold mb-1 text-danger d-block">Markets:</strong>
@@ -335,12 +335,12 @@
                                           <div class="services-block-three col-xl-4 col-lg-6 col-md-6 col-sm-12">
                                           <div class="inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                                           <div class="image">
-                                          <a href="#">
+                                          <a>
                                           <img src="./images/markets/market3.jpg" alt="Alt">
                                            </a>
                                           </div>
                                           <div class="lower-content">
-                                          <h3><a href="#">OIL & GAS SECTOR</a></h3>
+                                          <h3>OIL & GAS SECTOR</h3>
                                           <div class="text">
                                              <div class="market-info">
                                                 <strong class="font-weight-bold mb-1 text-danger d-block">Markets:</strong>
@@ -358,12 +358,12 @@
                                           <div class="services-block-three col-xl-4 col-lg-6 col-md-6 col-sm-12">
                                           <div class="inner-box wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
                                           <div class="image">
-                                          <a href="#">
+                                          <a>
                                           <img src="./images/markets/market4.jpg" alt="Alt">
                                           </a>
                                           </div>
                                           <div class="lower-content">
-                                          <h3><a href="#">CONSTRUCTION SECTOR</a></h3>
+                                          <h3>CONSTRUCTION SECTOR</h3>
                                           <div class="text">
                                              <div class="market-info">
                                                 <strong class="font-weight-bold mb-1 text-danger d-block">Markets:</strong>
@@ -381,12 +381,12 @@
                                           <div class="services-block-three col-xl-4 col-lg-6 col-md-6 col-sm-12">
                                           <div class="inner-box wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                                           <div class="image">
-                                          <a href="#">
+                                          <a>
                                           <img src="../images/markets/market5.jpg" alt="Alt">
                                           </a>
                                           </div>
                                           <div class="lower-content">
-                                          <h3><a href="#">INDUSTRIAL SECTOR</a></h3>
+                                          <h3>INDUSTRIAL SECTOR</h3>
                                           <div class="text">
                                              <div class="market-info">
                                                 <strong class="font-weight-bold mb-1 text-danger d-block">Markets:</strong>
@@ -404,12 +404,12 @@
                                           <div class="services-block-three col-xl-4 col-lg-6 col-md-6 col-sm-12">
                                              <div class="inner-box wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                                              <div class="image">
-                                             <a href="#">
+                                             <a>
                                              <img src="../images/markets/market5.jpg" alt="Alt">
                                              </a>
                                              </div>
                                              <div class="lower-content">
-                                             <h3><a href="#">AGRICULTURAL SECTOR</a></h3>
+                                             <h3>AGRICULTURAL SECTOR</h3>
                                              <div class="text">
                                                 <div class="market-info">
                                                    <strong class="font-weight-bold mb-1 text-danger d-block">Markets:</strong>
@@ -426,12 +426,12 @@
                                              <div class="services-block-three col-xl-4 col-lg-6 col-md-6 col-sm-12">
                                                 <div class="inner-box wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                                                 <div class="image">
-                                                <a href="#">
+                                                <a>
                                                 <img src="../images/markets/market7.jpg" alt="Alt">
                                                 </a>
                                                 </div>
                                                 <div class="lower-content">
-                                                <h3><a href="#">RENEWABLE ENERGY</a></h3>
+                                                <h3>RENEWABLE ENERGY</h3>
                                                 <div class="text">
                                                    <div class="market-info">
                                                       <strong class="font-weight-bold mb-1 text-danger d-block">Markets:</strong>
@@ -484,7 +484,9 @@
                                  <div id="custom_html-4" class="widget_text widget widget_custom_html">
                                     <div class="textwidget custom-html-widget">
                                        <div class="text">Creating Possibilities in Africa Through Opportunities We envision a flourishing and happy future for the people of Africa. The organization believes in overall growth through better ideas and innovation. Neelkanth Cables Limited strives to be a catalyst for positive change and cumulative progress.</div>
-                                       <a href="#" class="theme-btn btn-style-four">About NCL</a>
+                                       <a href="./about.htm" class="theme-btn btn-style-four">About NCL</a>
+
+
                                     </div>
                                  </div>
                               </div>
@@ -526,10 +528,12 @@
                            </div>
                            <div class="footer-column col-lg-3 col-md-4 col-sm-12">
                               <div class="footer-widget services-widget">
-                                 <h2>Recent Post</h2>
+                                 <h2>Get in Touch</h2>
+
                                  <div class="pl-xl-4 d-flex flex-column justify-content-center h-100">
                                     <a class="d-flex align-items-center mr-3 text-white mb-3" href="">
-                                      <i class="fas fa-phone mr-2"></i>
+                                      <i class="icon fa fa-phone text-white mr-2"></i>
+
                                       +260 212 671661
                                     </a>
                     
