--- a/contact.htm
+++ b/contact.htm
@@ -158,7 +158,8 @@
                   <div class="top-right clearfix">
                      <ul class="info-list clearfix">
                         <li><span class="icon fa fa-phone text-white mr-2"></span><a href="tel:http://(934)2567850">+260 212 671661</a></li>
-                        <li><span class="icon fa fa-envelope-open text-white mr-2"></span><a href="#"><span class="__cf_email__" data-cfemail="dbb0a9b4b7bab59bb0a9b4b7bab5f5b8a1">Sales @neelkanthcables.com</span></a></li>
+                        <li><span class="icon fa fa-envelope-open text-white mr-2"></span><a href="#"><span class="__cf_email__" data-cfemail="dbb0a9b4b7bab59bb0a9b4b7bab5f5b8a1">sales@neelkanthcables.com
+</span></a></li>
                      </ul>
                   </div>
                </div>
@@ -492,7 +493,7 @@
                                  <div class="elementor-element elementor-element-ffb4d2e elementor-widget elementor-widget-google_maps" data-id="ffb4d2e" data-element_type="widget" data-widget_type="google_maps.default">
                                  <div class="elementor-widget-container">
                                  <div class="elementor-custom-embed">
-                                 <iframe class="w-100 map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=London%20Eye%2C%20London%2C%20United%20Kingdom&t=m&z=10&output=embed&iwloc=near" title="%3$s" aria-label="%3$s"></iframe>
+                                 <iframe class="w-100 map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d248929.28127931544!2d28.5179389!3d-12.8742481!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x196cb58fe9cee2a1%3A0x1e0c0c0e234edbab!2sChilengwa%20St%2C%20Ndola%2C%20Zambia!5e0!3m2!1sen!2sin!4v1631877242367!5m2!1sen!2sin" title="%3$s" aria-label="%3$s"></iframe>
                                  </div>
                                  </div>
                                  </div>
@@ -666,7 +667,8 @@
                     
                                     <a class="d-flex align-items-center text-white mb-3" href="">
                                       <i class="fas fa-envelope mr-2"></i>
-                                      Sales @neelkanthcables.com
+                                      sales@neelkanthcables.com
+
                                     </a>
                     
                                     <div class="social-links d-flex">
