--- a/quality-assurance.htm
+++ b/quality-assurance.htm
@@ -159,7 +159,8 @@
                   <div class="top-right clearfix">
                      <ul class="info-list clearfix">
                         <li><span class="icon fa fa-phone text-white mr-2"></span><a href="tel:http://(934)2567850">+260 212 671661</a></li>
-                        <li><span class="icon fa fa-envelope-open text-white mr-2"></span><a href="#"><span class="__cf_email__" data-cfemail="dbb0a9b4b7bab59bb0a9b4b7bab5f5b8a1">Sales @neelkanthcables.com</span></a></li>
+                        <li><span class="icon fa fa-envelope-open text-white mr-2"></span><a href="#"><span class="__cf_email__" data-cfemail="dbb0a9b4b7bab59bb0a9b4b7bab5f5b8a1">sales@neelkanthcables.com
+</span></a></li>
                      </ul>
                   </div>
                </div>
@@ -872,7 +873,8 @@
                     
                                     <a class="d-flex align-items-center text-white mb-3" href="">
                                       <i class="fas fa-envelope mr-2"></i>
-                                      Sales @neelkanthcables.com
+                                      sales@neelkanthcables.com
+
                                     </a>
                     
                                     <div class="social-links d-flex">
