--- a/contact.htm
+++ b/contact.htm
@@ -350,7 +350,7 @@
                             <li class="nav-item">
                               <a class="nav-link" href="./support.htm">Support</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                               <a class="nav-link" href="./contact.htm">Contact</a>
                             </li>
                           </ul>
@@ -404,15 +404,15 @@
                                           </div>
                                           <ul class="contact-info-list">
                                           <li>
-                                          <span class="icon icon-home"></span><strong>Office Address</strong>P.O.Box No. 71035, Plot No. 1263/m Masaiti Area, Chilengwa Road, Ndola, Zambia</li>
+                                          <span class="icon icon-home"></span><strong>Office Address</strong>Plot No. 38785, Chat Breweries, Chinika Industrial Area - Lusaka</li>
                                           <li>
-                                          <span class="icon icon-location-pin"></span><strong>Factory Address</strong>Plot No. 38785, Chat Breweries, Chinika Industrial Area - Lusaka</li>
+                                          <span class="icon icon-location-pin"></span><strong>Factory Address</strong>P.O.Box No. 71035, Plot No. 1263/m Masaiti Area, Chilengwa Road, Ndola, Zambia</li>
                                           <li>
                                           <span class="icon icon-envelope-open"></span><strong>Email</strong>
-                                          <a href="#" class="__cf_email__ text-white" >Sales@neelkanthcables.com</a> 
+                                          <a href="#" class="__cf_email__ text-white" >sales@neelkanthcables.com</a> 
                                        </li>
                                           <li>
-                                          <span class="icon icon-call-in"></span><strong>Call Support</strong>+260 212 671661 <br>+260 212 671661</li>
+                                          <span class="icon icon-call-in"></span><strong>Call Support</strong>+260 212 671661 </li>
                                           </ul>
                                           <ul class="social-links">
                                           <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
