--- a/product.htm
+++ b/product.htm
@@ -183,7 +183,7 @@
                             <li class="nav-item">
                               <a class="nav-link" href="./about.htm">About</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown active">
                               <a class="nav-link dropdown-toggle" href="./product.htm" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                  Products
                               </a>
