--- a/quality-assurance.htm
+++ b/quality-assurance.htm
@@ -342,7 +342,7 @@
                             <li class="nav-item">
                               <a class="nav-link" href="./our-presence.htm">Our Presence</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                               <a class="nav-link" href="./quality-assurance.htm">Quality</a>
                             </li>
                             <li class="nav-item">
