--- a/about.htm
+++ b/about.htm
@@ -180,7 +180,7 @@
                             <li class="nav-item">
                               <a class="nav-link" href="./index.htm">Home</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                               <a class="nav-link" href="./about.htm">About</a>
                             </li>
                             <li class="nav-item dropdown">
