--- a/csr.htm
+++ b/csr.htm
@@ -345,7 +345,7 @@
                             <li class="nav-item">
                               <a class="nav-link" href="./quality-assurance.htm">Quality</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                               <a class="nav-link" href="./csr.htm">CSR</a>
                             </li>
                             <li class="nav-item">
