--- a/index.htm
+++ b/index.htm
@@ -152,7 +152,7 @@
                       
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
+                            <li class="nav-item active">
                               <a class="nav-link" href="./index.htm">Home</a>
                             </li>
                             <li class="nav-item">
