--- a/our-presence.htm
+++ b/our-presence.htm
@@ -338,7 +338,7 @@
                       
                               </div>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                               <a class="nav-link" href="./our-presence.htm">Our Presence</a>
                             </li>
                             <li class="nav-item">
