--- a/support.htm
+++ b/support.htm
@@ -347,7 +347,7 @@
                             <li class="nav-item">
                               <a class="nav-link" href="./csr.htm">CSR</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item active">
                               <a class="nav-link" href="./support.htm">Support</a>
                             </li>
                             <li class="nav-item">
