--- a/our-presence.htm
+++ b/our-presence.htm
@@ -147,13 +147,13 @@
                   <div class="top-left clearfix">
                      <div class="text">We want you safe 
 </div>
-                     <ul class="social-links clearfix">
+                     <!-- <ul class="social-links clearfix">
                         <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
                         <li><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
                         <li><a href="#"><span class="fab fa-twitter"></span></a></li>
                         <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
                         <li><a href="#"><span class="fab fa-youtube"></span></a></li>
-                     </ul>
+                     </ul> -->
                   </div>
                   <div class="top-right clearfix">
                      <ul class="info-list clearfix">
@@ -679,11 +679,11 @@
 
                                     </a>
                     
-                                    <div class="social-links d-flex">
-                                      <a class="text-white mr-3" href=""><i class="fab fa-facebook-f"></i></a>
-                                      <a class="text-white mr-3" href=""><i class="fab fa-instagram"></i></a>
-                                      <a class="text-white mr-3" href=""><i class="fab fa-twitter"></i></a>
-                                    </div>
+                                    <div class="d-flex  text-white mb-3" href="">
+                                       <i class="fas fa-map-marker mr-2 mt-1"></i>
+                                       Plot No. 38785, Chat Breweries, Chinika Industrial Area - Lusaka
+ 
+                                     </div>
                                   </div>
                                 
                               </div>
