about us page update

--- a/about.htm
+++ b/about.htm
@@ -397,7 +397,7 @@ Our success story inspires 500+ dealers and 2000+ retailers to distribute our pr
                                                       <div class="elementor-widget-wrap">
                                                          <div class="elementor-element elementor-element-4b41574 elementor-widget elementor-widget-mission" data-id="4b41574" data-element_type="widget" data-widget_type="mission.default">
                                                             <div class="elementor-widget-container">
-                                                               <section class="mission-section section-padder" style="background-image: url(./images/mission-bg.jpg);">
+                                                               <section class="mission-section section-padder" style="background-image: url(./images/mission-bg.jpg); background-attachment: fixed;">
                                                                   <div class="auto-container">
                                                                      <div class="sec-title light  centered">
                                                                         <div class="title text-white">
@@ -524,7 +524,7 @@ Our success story inspires 500+ dealers and 2000+ retailers to distribute our pr
                                                       <div class="elementor-widget-wrap">
                                                          <div class="elementor-element elementor-element-4b41574 elementor-widget elementor-widget-mission" data-id="4b41574" data-element_type="widget" data-widget_type="mission.default">
                                                             <div class="elementor-widget-container">
-                                                               <section class="mission-section section-padder" style="background-image: url(./images/mission-bg.jpg);">
+                                                               <section class="mission-section section-padder" style="background-image: url(./images/mission-bg.jpg); background-attachment: fixed;">
                                                                   <div class="auto-container">
                                                                      <div class="sec-title light  centered">
                                                                         <div class="title text-white">
