--- a/contact.htm
+++ b/contact.htm
@@ -73,7 +73,8 @@
                   </div>
                   <div class="top-right clearfix">
                      <ul class="info-list clearfix">
-                        <li><span class="icon fa fa-phone text-white mr-2"></span><a href="tel:http://(934)2567850">+260 212 671661</a></li>
+                        <li><span class="icon fas fa-phone
+ text-white mr-2"></span><a href="tel:http://(934)2567850">+260 212 671661</a></li>
                         <li><span class="icon fa fa-envelope-open text-white mr-2"></span><a href="#"><span class="__cf_email__" data-cfemail="dbb0a9b4b7bab59bb0a9b4b7bab5f5b8a1">sales@neelkanthcables.com
 </span></a></li>
                      </ul>
@@ -258,14 +259,14 @@
                               <a class="nav-link" href="./our-presence.htm">Our Presence</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="./quality-assurance.htm">Quality</a>
+                              <a class="nav-link" href="./quality-assurance.htm">Quality & Support</a>
+
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="./csr.htm">CSR</a>
                             </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="./support.htm">Support</a>
-                            </li>
+                           
+
                             <li class="nav-item active">
                               <a class="nav-link" href="./contact.htm">Contact</a>
                             </li>
@@ -322,7 +323,7 @@
                                           <li>
                                           <span class="icon icon-home"></span><strong>Office Address</strong>Plot No. 38785, Chat Breweries, Chinika Industrial Area - Lusaka</li>
                                           <li>
-                                          <span class="icon icon-location-pin"></span><strong>Factory Address</strong>P.O.Box No. 71035, Plot No. 1263/m Masaiti Area, Chilengwa Road, Ndola, Zambia</li>
+                                          <span class="icon icon-location-pin"></span><strong>Factory Address</strong>Plot No. 1263/m Masaiti Area, Chilengwa Road, Ndola, Zambia, P.O.Box No. 71035</li>
                                           <li>
                                           <span class="icon icon-envelope-open"></span><strong>Email</strong>
                                           <a href="#" class="__cf_email__ text-white" >sales@neelkanthcables.com</a> 
@@ -576,7 +577,9 @@
 
                                  <div class="pl-xl-4 d-flex flex-column justify-content-center h-100">
                                     <a class="d-flex align-items-center mr-3 text-white mb-3" href="">
-                                      <i class="icon fa fa-phone text-white mr-2"></i>
+                                      <i class="icon fas fa-phone
+
+ text-white mr-2"></i>
 
                                       +260 212 671661
                                     </a>
