--- a/csr.htm
+++ b/csr.htm
@@ -74,7 +74,9 @@
                   </div>
                   <div class="top-right clearfix">
                      <ul class="info-list clearfix">
-                        <li><span class="icon fa fa-phone text-white mr-2"></span><a href="tel:http://(934)2567850">+260 212 671661</a></li>
+                        <li><span class="icon fas fa-phone
+
+ text-white mr-2"></span><a href="tel:http://(934)2567850">+260 212 671661</a></li>
                         <li><span class="icon fa fa-envelope-open text-white mr-2"></span><a href="#"><span class="__cf_email__" data-cfemail="dbb0a9b4b7bab59bb0a9b4b7bab5f5b8a1">sales@neelkanthcables.com
 </span></a></li>
                      </ul>
@@ -259,14 +261,14 @@
                               <a class="nav-link" href="./our-presence.htm">Our Presence</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="./quality-assurance.htm">Quality</a>
+                              <a class="nav-link" href="./quality-assurance.htm">Quality & Support</a>
+
                             </li>
                             <li class="nav-item active">
                               <a class="nav-link" href="./csr.htm">CSR</a>
                             </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="./support.htm">Support</a>
-                            </li>
+                           
+
                             <li class="nav-item">
                               <a class="nav-link" href="./contact.htm">Contact</a>
                             </li>
@@ -330,7 +332,7 @@
                                           <div class="row pb-5">
                                              <div class="col-md-10 mx-auto">
                                                 <div class="text text-center">
-                                                   <p>We believe that our corporate social responsibility initiatives are a core part of our company. What separates us from our competitors is that we focus on society before ourselves. Our Corporate Citizenship is reflects in our support initiatives to the community schools, clinics, hospitals and sports academies.</p>
+                                                   <p>We have always believed in greater emphasis on social responsibility through all our actions. To that effect, we have stayed focused on helping build the society and support the community as part of all our Corporate Social Responsibility initiatives. Having supported through initiatives that have helped community schools, clinics, hospitals and sports academies, we hope to reinforce our commitment to society.</p>
                                                 </div>
                                              </div>
                                           </div>
@@ -596,7 +598,9 @@
 
                                  <div class="pl-xl-4 d-flex flex-column justify-content-center h-100">
                                     <a class="d-flex align-items-center mr-3 text-white mb-3" href="">
-                                      <i class="icon fa fa-phone text-white mr-2"></i>
+                                      <i class="icon fas fa-phone
+
+ text-white mr-2"></i>
 
                                       +260 212 671661
                                     </a>
