product slider bg update

--- a/index.htm
+++ b/index.htm
@@ -813,7 +813,7 @@
                                                       <div class="elementor-widget-wrap">
                                                          <div class="elementor-element elementor-element-5c4eae7 elementor-widget elementor-widget-factsfunctions" data-id="5c4eae7" data-element_type="widget" data-widget_type="factsfunctions.default">
                                                             <div class="elementor-widget-container">
-                                                               <section class="fun-facts-section" style="background-image:url(./images/product-bg.png);">
+                                                               <section class="fun-facts-section" style="background-image:url(./images/product-bg.png); background-size: cover;">
                                                                   <div class="auto-container">
                                                                     
                                                                      <div class="bg-white p-4 px-lg-5 shadow" data-aos="fade-up"  data-aos-duration="500">
